Add users component, set global box-sizing

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,10 @@
 /* noinspection CssInvalidAtRule */
 @import-normalize;
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     font-family: sans-serif;
